# investment-research-database

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE_TEMPLATE.md  README-FOR-ALEX.md  README.md  README.zh.md  ROADMAP.md  build_entities.sql  claude-code-workflow-guide.md  docker-compose.dev.yml  docker-compose.yml  import_sources.sql  migration_0003.sql  migration_0003_only.sql  migration_0004.sql  migration_0008_auth.sql  migration_0010.sql  migration_supabase.sql  render.yaml  seed_supabase.sql  set_embedding_dim.sql  signal-paper-analysis.code-workspace  task.md  test_2017.py  test_2017_2.py  test_all.py  test_attention.py  test_concept.py  test_direct.py  test_doi.py  test_original.py  test_original_detail.py  test_papers.py  test_search.py  test_semantic_experiment.py  test_vaswani.py  test_vaswani2.py  test_year.py  (+2 more)
backend/: .dockerignore  .env  Dockerfile  README.md  alembic.ini  gen_seed_sql.py  import_sources_csv.py  index.py  pyproject.toml  pytest.ini  requirements.txt  seed.py  start.sh
backend/alembic/: env.py
backend/app/: __init__.py  database.py  db.py  main.py
backend/data/: world_model_export.json
backend/scripts/: find_citation_relations.py  import_world_model_papers.py  migrate_json_to_sqlite.py
backend/tests/: __init__.py  test_api.py  test_api_search.py  test_citation_network.py  test_errors.py  test_health.py  test_impact_scoring.py  test_models.py  test_openalex_client.py  test_world_model_api.py
digest/: .env.example  .gitignore  ONBOARDING_INSIGHTS.md  PROJECT.md  README.md  pyproject.toml
digest/config/: headline_constraints.yml  p0_whitelist.yml  rss_feeds.yaml
digest/docs/: 2026-06-02-digest-pipeline-incident.md  2026-06-02-stability-remediation-plan.md  2026-06-03-next-round-plan.md
digest/scripts/: apply_url_enrichment.py  author_lookup_post_process.py  backfill_digest_index.py  backtest_headlines.py  backtest_tier_bonus.py  batch_test_rm_v4.py  bootstrap_tier_field.py  broadcast_0609.py  broadcast_0610.py  broadcast_0612.py  broadcast_0613.py  broadcast_today.sh  broadcast_today_main.sh  bulk_fill_arxiv_query.py  deploy_web_index.sh  digest_review_agent.py  enrich_arxiv_validation.py  enrich_whitelist_urls.py  generate_p0_whitelist_snapshot.py  generate_v3_digest.py  health_check.sh  notify_failure.py  notify_success.py  preflight_bitable_schema.py  publish_edited_digest.py  publish_with_anchors.py  regenerate_digest.py  retry_insert_images.py  run_daily_pipeline.sh  run_daily_pipeline_main.sh  run_for_date_cst.py  send_0609_form_a.py  send_0610_form_a.py  send_0611_form_a.py  send_0612_form_a.py  send_0613_form_a.py  send_0614_form_a.py  send_0615_form_a.py  send_digest_to_enterprise.py  send_digest_to_feishu_bot.py  (+9 more)
digest/tests/: test_arxiv_fuse.py  test_capital_signals.py  (+19 more)
(+595 files in other folders)
